@@ -414,6 +414,10 @@ Bugfixes:
 - [SF 3093882] calling open() on an already open port now raises an exception
 - [SF 3245627] connection-lost let rfc2217 hangs in closed loop
 
+Bugfixes (posix):
+
+- [SF 3316943] Avoid unneeded termios.tcsetattr calls in serialposix.py
+
 Bugfixes (win32):
 
 - [SF 3057499] writeTimeoutError when write Timeout is 0
